updating maven dependencies and applying general code improvements https://github.com/gbif/pipelines/issues/635